if(ASH_LOGGER_EXTENSIONS_ENABLE_USAGE_OF_EXTERNAL_VENDORS OR ASH_LOGGER_EXTENSIONS_ENABLE_DEVELOPMENT_ENVIRONMENT)
    set(ASH_ENABLE_LOGGER ON)
    set(ASH_ENABLE_USAGE_OF_EXTERNAL_VENDORS ON)
endif(ASH_LOGGER_EXTENSIONS_ENABLE_USAGE_OF_EXTERNAL_VENDORS OR ASH_LOGGER_EXTENSIONS_ENABLE_DEVELOPMENT_ENVIRONMENT)

set(USE_ZLIB OFF)

add_subdirectory("fmt")

if(ASH_LOGGER_EXTENSIONS_ENABLE_GRAFANA_LOKI)
    add_subdirectory("json")
    add_subdirectory("IXWebSocket")
endif(ASH_LOGGER_EXTENSIONS_ENABLE_GRAFANA_LOKI)

add_subdirectory("Ash")